# sockrats

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md
examples/: config-minimal.toml  config-multiple-minimal-wireguard.toml  config-multiple-minimal.toml  config.toml
src/: error.rs  helper.rs  lib.rs  main.rs
src/client/: client.rs  control_channel.rs  data_channel.rs  mod.rs
src/config/: client.rs  mod.rs  pool.rs  transport.rs
src/pool/: channel.rs  guard.rs  manager.rs  mod.rs  tcp_pool.rs
src/protocol/: codec.rs  digest.rs  mod.rs  types.rs
src/services/: mod.rs
src/services/socks/: handler.rs  mod.rs  tcp_relay.rs  types.rs
src/services/socks/auth/: mod.rs  none.rs  password.rs
src/services/socks/command/: mod.rs  parser.rs  reply.rs
src/services/socks/udp/: associate.rs  forwarder.rs  mod.rs  packet.rs  relay.rs
src/services/ssh/: config.rs  handler.rs  mod.rs  process.rs  session.rs
src/services/ssh/auth/: authorized_keys.rs  publickey.rs
src/services/template/: mod.rs
src/services/vncserver/: auth.rs  capture.rs  client.rs  config.rs  encoding.rs  error.rs  framebuffer.rs  mod.rs  protocol.rs  server.rs
src/socks/: consts.rs  handler.rs  mod.rs  tcp_relay.rs
src/socks/auth/: mod.rs  password.rs
src/socks/command/: parser.rs  reply.rs
src/socks/udp/: associate.rs  forwarder.rs  mod.rs  packet.rs
src/ssh/: config.rs  handler.rs  keys.rs  mod.rs  process.rs  session.rs
src/ssh/auth/: mod.rs  password.rs  publickey.rs
src/transport/: addr.rs  mod.rs  noise.rs  tcp.rs  tls.rs
src/transport/wireguard/: config.rs  device.rs  event_loop.rs  mod.rs  stack.rs  stream.rs  tunnel.rs
tests/: test-integration.sh
tests/common/: mod.rs
tests/fixtures/: rathole-server.toml  test-config.toml  test-multi-service.toml  test-socks5.toml  test-ssh.toml
