[package]
name = "sockrats"
version = "0.1.0"
edition = "2021"
authors = ["Sockrats Contributors"]
description = "Reverse SOCKS5 tunneling client using rathole protocol"
license = "MIT"
readme = "README.md"
repository = "https://github.com/antrusd/sockrats"
keywords = ["socks5", "proxy", "tunnel", "rathole", "reverse-proxy"]
categories = ["network-programming", "command-line-utilities"]

[features]
default = ["ssh", "wireguard"]

# SSH server support
ssh = ["russh", "ssh-key", "rand", "portable-pty"]

# WireGuard tunnel support (userspace, no TUN/TAP)
wireguard = ["boringtun", "smoltcp", "x25519-dalek"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Core utilities
anyhow = "1.0"
thiserror = "1"
bytes = { version = "1", features = ["serde"] }
async-trait = "0.1"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Protocol serialization
bincode = "1"
sha2 = "0.10"
lazy_static = "1.4"

# Networking
socket2 = { version = "0.5", features = ["all"] }
backoff = { version = "0.4", features = ["tokio"] }

# SOCKS5 protocol
tokio-stream = "0.1"
futures = "0.3"

# Noise protocol (mandatory - pure Rust, zero C dependencies, zigbuild friendly)
snowstorm = { version = "0.4", features = ["stream"], default-features = false }
base64 = "0.22"

# Optional SSH server (russh) - using ring backend instead of aws-lc-rs for zigbuild cross-compilation
russh = { version = "0.57", optional = true, default-features = false, features = ["ring"] }
ssh-key = { version = "0.6", optional = true, features = ["ed25519", "rsa", "std"] }
rand = { version = "0.8", optional = true }
portable-pty = { version = "0.8", optional = true }

# Optional WireGuard tunnel (userspace, no TUN/TAP, pure Rust via boringtun + smoltcp)
boringtun = { version = "0.7", optional = true, default-features = false }
smoltcp = { version = "0.12", optional = true, default-features = false, features = [
    "medium-ip", "proto-ipv4", "socket-tcp", "std",
] }
x25519-dalek = { version = "2", optional = true, features = ["static_secrets"] }

# Proxy support for outbound connections
async-http-proxy = { version = "1.2", features = ["runtime-tokio", "basic-auth"] }
async-socks5 = "0.6"
url = { version = "2.2", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
tempfile = "3"

[[bin]]
name = "sockrats"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"  # Optimize for size
